# videotopdf_ui

./: LICENSE  app copy.py  app.py  asr.py  audio.json  audio.srt  audio.tsv  audio.txt  audio.vtt  converttopdf.js  converttopdf.py  converttopdf01.py  latestapp copy.py  ocrapi.py  package-lock.json  pyproject.toml  readme.md  readpdf.py  requirements.txt  testocr.py
input/: test01.json  test01.srt
